[package]
name = "kroeg"
version = "0.1.0"
authors = ["Puck Meerburg <puck@puckipedia.com>"]
edition = "2018"

[dependencies]
kroeg-server = { path = "../server" }
kroeg-tap = { path = "../tap/tap" }
http-service = "0.3"
http-service-hyper = "0.3"
async-std = "0.99"
dotenv = "0.9.0"
async-trait = "0.1"
http = "0.1.18"
