[package]
name = "kroeg"
version = "0.2.0"
authors = ["Puck Meerburg <puck@puckipedia.com>"]
edition = "2018"

[features]
default = ["mastodon", "oauth"]

mastodon = ["kroeg-mastodon"]
oauth = ["kroeg-oauth"]

[dependencies]
kroeg-server = { path = "../server" }
kroeg-cellar = { path = "../cellar" }
kroeg-tap = { path = "../tap/tap" }
kroeg-tap-activitypub = { path = "../tap/activitypub" }
kroeg-mastodon = { path = "../mastodon", optional = true }
kroeg-oauth = { path = "../oauth", optional = true }
jsonld = { path = "../jsonld-rs" }
clap = "2.33.0"
http-service = "0.3"
http-service-hyper = "0.3"
async-std = "0.99"
dotenv = "0.9.0"
async-trait = "0.1"
http = "0.1.18"
serde_json = "1.0"
openssl = "0.10"
base64 = "0.9"
